# django-error-reporting

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
django_error_reporting/: apps.py  constants.py  middleware.py  settings.py  utils.py
django_error_reporting/contrib/: __init__.py  datadog.py  sentry.py
test_app/: settings.py  urls.py  views.py  wsgi.py
