[metadata]
name = django-error-reporting
version = 0.2
author = Logan Bibby <lbibby@thesummitgrp.com>
description = DataDog and Sentry error reporting for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lenders-Cooperative/django-error-reporting
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = django_error_reporting
python_requires = >=3.6
install_requires =
    django>=2.2.9
    sentry-sdk>=1.5.4
    ddtrace>=0.59.0
