[metadata]
name = django-error-reporting
version = 0.9
author = Logan Bibby <lbibby@thesummitgrp.com>
description = DataDog and Sentry error reporting for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lenders-Cooperative/django-error-reporting
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    django>=2.2.9
    sentry-sdk<=2.19.0
    ddtrace>=0.59.0
    django-datadog-logger>=0.5.0
